k3s/joplin/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: joplin
  labels:
    app: app
spec:
  ports:
    - name: "http"
      port: 22300
      targetPort: 22300
  selector:
    app: app
