k3s/joplin/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: joplin
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - env:
            - name: APP_BASE_URL
              value: joplin.internal
            - name: APP_PORT
              value: "22300"
            - name: DB_CLIENT
              value: pg
            - name: POSTGRES_DATABASE
              value: joplin
            - name: POSTGRES_DBPASSWORD
              valueFrom:
                secretKeyRef:
                    name: joplin-database
                    key: postgres_pw
            - name: POSTGRES_HOST
              value: db
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                    name: joplin-database
                    key: postgres_user
          image: joplin/server:latest
          name: app
          ports:
            - containerPort: 22300
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: joplin
  labels:
    app: app
spec:
  ports:
    - name: "http"
      port: 22300
      targetPort: 22300
  selector:
    app: app
