k3s/joplin/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: joplin
  labels:
    app: db
spec:
  ports:
    - name: "db"
      port: 5432
      targetPort: 5432
  selector:
    app: db
