k3s/joplin/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: joplin
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: joplin
            - name: POSTGRES_PASSWORD
              value: joplin
            - name: POSTGRES_USER
              value: joplin
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: postgres:16
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-claim0
      restartPolicy: Always
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0

---

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: joplin
  labels:
    app: db
spec:
  ports:
    - name: "db"
      port: 5432
      targetPort: 5432
  selector:
    app: db
