k3s/joplin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin
  namespace: joplin
  labels:
    app: joplin
  annotations:
    gethomepage.dev/description: Self-Hosted Notes
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: sh-joplin
    gethomepage.dev/name: Joplin
spec:
  rules:
    - host: "http://joplin.internal"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 22300
